--- a/mkfs/Makefile
+++ b/mkfs/Makefile
@@ -1,3 +1,6 @@
+IMG = ouichefs.img
+VM_DIR = ../../../Linux_Vm
+
 BIN ?= mkfs.ouichefs
 IMG ?= test.img
 IMGSIZE ?= 50
@@ -11,6 +14,7 @@ img: ${BIN}
 	rm -rf ${IMG}
 	dd if=/dev/zero of=${IMG} bs=1M count=${IMGSIZE}
 	./${BIN} ${IMG}
+	cp ${IMG} ${VM_DIR}/ouichefs.img
 	sync
 
 clean:
